Refactor item set display